--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,12 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "beautifulsoup4>=4.13.4",
+    "crawl4ai>=0.7.7",
     "curl-cffi>=0.12.0",
     "dotenv>=0.9.9",
     "html-text>=0.7.0",
     "openai>=1.96.1",
     "pandas>=2.3.1",
+    "tenacity>=9.1.2",
     "tiktoken>=0.9.0",
 ]
