--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "crawl4ai>=0.7.7",
     "curl-cffi>=0.12.0",
     "dotenv>=0.9.9",
+    "google-genai>=1.54.0",
     "html-text>=0.7.0",
     "openai>=1.96.1",
     "pandas>=2.3.1",
